# tester-agent

./: LICENSE  README.md  app.py  pyproject.toml  requirements.txt
core/: extractor.py  generator.py  sandbox.py  test_builder.py  utils.py  validator.py
examples/: template.py
prompts/: extract_schema.txt  generate_solution.txt  generate_tests.txt
